2004-11-11  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkMain.c:
	* macosx/tkMacOSXAppInit.c (removed):
	* macosx/Wish.pbproj/project.pbxproj: 
	* macosx/tkMacOSXInit.c:
	* macosx/tkMacOSXInt.h: changes to make TkAqua dynamically loadable,
	enabling [package require Tk] from tclsh. Startup code from
	tkMacOSXAppInit.c moved into tkMacOSXInit.c, added code that
	notifies the window server that an unbundled executable is a full
	GUI application after loading Tk. [Patch 1035348]

	* doc/wm.n: documented [wm attributes] on Mac OS X. [Bug 606665]
	* macosx/tkMacOSXWm.c: implemented TIP 222 [wm attributes -alpha] on
	Mac OS X. [Patch 892194]
	WmIconbitmapCmd: adopted FSRef changes from [wm atttrs -titlepath].

	* macosx/tkMacOSXButton.c:
	* macosx/tkMacOSXMenus.c:
	* macosx/tkMacOSXRegion.c:
	* macosx/tkMacOSXSubwindows.c: synced spacing/formatting with HEAD.

	* macosx/tkMacOSXMouseEvent.c: endianness fixes.

	* macosx/Wish.pbproj/project.pbxproj: corrected path to html help
	inside framework.

	* macosx/Makefile: prevent parallel make from building several
	targets at the same time.
	Ensure that xcodebuild will use Wish.pbproj project even if a .xcode
	project is also present.

2004-11-10  Jim Ingham  <jingham@apple.com>

	From Michael Kirkham (mikek@muonics.com):
	
	* macosx/tkMacOSXButton.c (TkpDisplayButton): Don't set
	the text if compound is NONE and we have and image.
	[Bug 1055023]
	
2004-10-29  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/wm.test: Add Win32 test cases for attributes
	subcommand.
	* win/tkWinWm.c (WmAttributesCmd): Fixup broken
	option processing logic for attributes subcommand.

2004-10-29  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc (DOTVERSION): Was installing 8.4 relabelled as 8.5

	* library/tk.tcl (::tk::PlaceWindow): Backported the fix from 
	#533519 to handle window placement on multi-monitor Windows.

2004-10-28  Mo DeJong  <mdejong@users.sourceforge.net>
